# myproj

./: .pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
src/myproj/: mathy.py
src/myproj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_mathy.py
